# cern

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  meson.build  vcpkg.json
.github/workflows/: cmake-single-platform.yml
cross-files/: x86_64-Clang.ini
include/cern/: cern.h
include/cern/core/: core.h  environment.h  icloneable.h
include/cern/core/windows/: handle.h
include/cern/drawing/: bitmap.h  brush.h  color.h  color_palette.h  content_alignment.h  copy_pixel_operation.h  device_capabilities.h  device_context_type.h  drawing.h  font.h  font_family.h  font_style.h  frame_dimension.h  graphics.h  graphics_context.h  graphics_unit.h  icon.h  image.h  image_format.h  known_color.h  matrix.h  pen.h  pixel_format.h  point.h  point_f.h  property_item.h  rectangle.h  rectangle_f.h  region.h  rotate_flip_type.h  size.h  size_f.h  solid_brush.h  texture_brush.h
include/cern/drawing/2d/: blend.h  brush_type.h  color_blend.h  combine_mode.h  compositing_mode.h  compositing_quality.h  coordinate_space.h  dash_cap.h  dash_style.h  fill_mode.h  flush_intention.h  graphics_container.h  graphics_path.h  graphics_state.h  hatch_brush.h  hatch_style.h  interpolation_mode.h  line_cap.h  line_join.h  matrix.h  matrix_order.h  pen_alignment.h  pen_type.h  pixel_offset_mode.h  quality_mode.h  region_data.h  smoothing_mode.h  wrap_mode.h
include/cern/drawing/imaging/: bitmap_data.h  lock_mode.h
include/cern/drawing/internal/: apply_graphics_properties.h  color_translator.h  device_context.h  device_context_background_mode.h  device_context_binary_raster_operation_flags.h  device_context_graphics_mode.h  device_context_map_mode.h  device_context_text_alignment.h  device_context_type.h  font_handle_wrapper.h  gdi_object_type.h  graphics_mode.h  i_device_context.h  native_gdi_object.h  region_combine_mode.h  region_flags.h  windows_font.h  windows_font_quality.h  windows_graphics.h  windows_region.h
include/cern/drawing/primitives/: color.h
include/cern/drawing/text/: font_collection.h  generic_font_families.h  installed_font_collection.h  private_font_collection.h  text_hendering_hint.h
include/cern/io/: stream.h
include/cern/net/: socket.h
include/cern/ui/: ambient_properties.h  anchor_styles.h  auto_size_mode.h  bounds_specific.h  bounds_specified.h  common_properties.h  component.h  content_alignment.h  context_menu.h  context_menu_strip.h  control.h  control_bindings_collection.h  control_collection.h  control_native_window.h  control_styles.h  control_tab_order_holder.h  create_params.h  cursor.h  dock_style.h  dpi_helper.h  drag_event_args.h  drop_target.h  get_child_at_point_skip.h  horizontal_alignment.h  image_layout.h  keys.h  layout_engine.h  left_right_alignment.h  mdi_client.h  menu.h  message.h  mouse_buttons.h  native_window.h  padding.h  property_names.h  property_store.h  right_to_left.h  scrollable_control.h  text_format_flags.h  text_image_relation.h  (+7 more)
include/cern/ui/accesability/: ole_window.h
include/cern/ui/bit32/: vector.h
include/cern/ui/component_model/: cancel_event_args.h  component.h  control_event_args.h  event_args.h  icomponent.h  icontainer.h  invalidate_event_args.h  iservice_provider.h  isite.h  layout_event_args.h  paint_event_args.h
include/cern/ui/layout/: default_layout.h  iarranged_element.h  layout_engine.h  layout_transaction.h  layout_utils.h
include/cern/ui/win32/: data_object.h  window.h
src/core/: icloneable.c
src/core/windows/: handle.c
src/drawing/gdi/: bitmap.c  brush.c  color.c  color_palette.c  device_context.c  drawing.c  font.c  font_family.c  frame_dimension.c  graphics.c  graphics_context.c  icon.c  image.c  image_format.c  pen.c  point.c  point_f.c  property_item.c  rectangle.c  rectangle_f.c  region.c  size.c  size_f.c  solid_brush.c
src/drawing/gdi/2d/: blend.c  color_blend.c  graphics_container.c  graphics_path.c  graphics_state.c  hatch_brush.c  matrix.c  region_data.c
src/drawing/gdi/imaging/: bitmap_data.c
src/drawing/gdi/internal/: color_translator.c  device_context.c  font_handle_wrapper.c  i_device_context.c  native_gdi_object.c  windows_font.c  windows_graphics.c  windows_region.c
src/drawing/gdi/text/: font_collection.c  installed_font_collection.c  private_font_collection.c
src/io/: stream.c
src/ui/: ambient_properties.c  common_properties.c  control.c  control_native_window.c  control_tab_order_holder.c  create_params.c  cursor.c  dpi_helper.c  drop_target.c  native_window.c  padding.c  property_names.c  property_store.c  text_renderer.c  window_target.c
src/ui/component_model/: cancel_event_args.c  component.c  event_args.c  icomponent.c  icontainer.c  iservice_provider.c  isite.c
src/ui/layout/: default_layout.c  layout_transaction.c
src/ui/win32/: window.c
subprojects/: .gitingore
